<resources>
    <string name="incomingText">Incoming Call</string>
    <string name="outgoingText">Outgoing Call</string>
    <string name="callStatus">Calling...</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="mute">Mute</string>
    <string name="disconnect">Disconnect</string>
    <string name="speaker">Speaker</string>
    <string name="OpenSans_Light">OpenSans_Light</string>
    <string name="OpenSans_Reguler">OpenSans_Reguler</string>
    <string name="OpenSans_Semibold">M</string>

    // shared preference values
    <string name="accountId">accountId</string>
    <string name="apikey">apikey</string>
    <string name="sna">patch_sna</string>
    <string name="token">token</string>
    <string name="patch_token">patch_token</string>
    <string name="websocket">websocket</string>
    <string name="cc">cc</string>
    <string name="phone">phone</string>
    <string name="callContext">context</string>
    <string name="recording">recording</string>
    <string name="webhook">webhook</string>
    <string name="var1">var1</string>
    <string name="var2">var2</string>
    <string name="var3">var3</string>
    <string name="var4">var4</string>
    <string name="var5">var5</string>
    <string name="tags">tags</string>
    <string name="platform">platform</string>
    <string name="android">android</string>

    //strings declared in socketService
    <string name="jwt">jwt=</string>
    <string name="sconnect">connect</string>
    <string name="sauthenticated">authenticated</string>
    <string name="sanswer">answer</string>
    <string name="sdecline">decline</string>
    <string name="fcm_notification_ack">fcm-notification-ack</string>
    <string name="smiss">miss</string>
    <string name="scancel">cancel</string>
    <string name="sincoming_call">incoming_call</string>
    <string name="sconnection_timeout">connect_timeout</string>
    <string name="sreconnect_failed">reconnect_failed</string>
    <string name="sauthentication">authentication</string>
    <string name="smakecall">makecall</string>
    <string name="callDetails">callDetails</string>
    <string name="screen">screen</string>
    <string name="incoming">incoming</string>
    <string name="sid">sid</string>
    <string name="pstn">pstn</string>
    <string name="scontext">context</string>
    <string name="scall">call</string>
    <string name="outgoing">outgoing</string>
    <string name="callScreen">callScreen</string>
    <string name="shost">host</string>

    //calling activies and fragment
    <string name="jsurl">file:///android_asset/index.html</string>
    <string name="id">id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="poweredBy">Powered by PatchUS</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="spure_pstn">pure-pstn</string>

    <!--notification service-->
    <string name="snotify">notify</string>
    <string name="snotificationRespsonse">notification-response</string>
    <string name="snotification">notification</string>
    <string name="platform_android">android</string>
    <string name="patch_notificationUI">patch_notificationUI</string>
    <string name="patch_notification">patch_notification</string>
    <string name="patch_notificationlistener">notificationlistener</string>
    <string name="patch_sentimentReciever">sentimentReciever</string>
    <string name="microphone_permission_not_granted">Microphone permission not granted</string>
    <string name="client_busy">User Busy</string>

    <!--notification channels-->
    <string name="primary_channel_id">com.patch.patchcalling</string>
    <string name="primary_channel_name">Actionable Notifications</string>
    <string name="primary_channel_desc">Patchus Notifications</string>
    <string name="secondary_channel_id">com.patch.patchcalling.callNotification</string>
    <string name="secondary_channel_name">Call Notifications</string>
    <string name="secondary_channel_desc">Patchus Call Notifications</string>
    <string name="outgoing_fragment_tag">OutgoingFrag</string>
    <string name="incoming_fragment_tag">incomingFrag</string>
    <string name="callScreen_fragment_tag">callScreenFrag</string>
    <string name="sunauthorized">unauthorized</string>
    <string name="hold">Hold</string>
    <string name="callType">callType</string>
    <string name="hold_unhold">hold-unhold</string>
    <string name="call_answer">call_answer</string>
    <string name="invalid_cuid">Invalid Cuid</string>
    <string name="active_template">activeTemplate</string>
    <string name="template_default">default</string>
    <string name="template_full_image">img</string>
    <string name="template_video">video</string>
    <string name="template_pinview">pinview</string>
    <string name="template_banner_image">banner-img</string>
    <string name="template_gif">gif</string>
    <string name="template_scratchcard">scratchcard</string>
    <string name="patch_missedCallInitiatorActions">missedCallInitiatorActions</string>
    <string name="patch_missedCallReceiverActions">missedCallReceiverActions</string>
    <string name="patch_missedCallInitiatorHost">missedCallInitiatorHost</string>
    <string name="patch_missedCallReceiverHost">missedCallReceiverHost</string>
    <string name="prefs_baseurl">patch_baseurl</string>
    <string name="prefs_profileUrl">prefs_profileUrl</string>
    <string name="patch_template_pinview_config">patch_template_pinview</string>
    <string name="patch_template_scratchcard_config">patch_template_scratchcard</string>
</resources>
