<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myPrefix="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_background"
    android:background="@color/bg_incomingcolor"
    tools:context="com.patch.patchcalling.fragments.PatchOutgoingFragment">


    <com.patch.patchcalling.custom.CustomTextView
        android:id="@+id/tv_callScreen_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:text="@string/outgoingText"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_6sdp"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:textAlignment="center"
        />
    <com.patch.patchcalling.custom.CustomTextView
        android:id="@+id/tv_callStatus"
        android:layout_below="@id/tv_callScreen_label"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_14sdp"
        android:text="@string/callStatus"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_6sdp"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_below="@+id/tv_callStatus"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_38sdp"
        android:padding="@dimen/_6sdp"/>

    <com.patch.patchcalling.custom.CustomTextView
        android:id="@+id/tv_context"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sdp"
        android:text=""
        android:maxLines="2"
        android:ellipsize="end"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_6sdp"
        android:textAlignment="center"
        android:textColor="@android:color/white"/>

    <com.patch.patchcalling.custom.CustomTextView
        android:id="@+id/tv_busy_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:padding="@dimen/_6sdp"
        android:textColor="@android:color/white"
        android:text="User is busy on another call"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_context"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_poweredBy"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_decline"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="@string/decline"
                android:layout_gravity="center"
                android:src="@drawable/disconnect" />

        </LinearLayout>
    </LinearLayout>

    <com.patch.patchcalling.custom.CustomTextView
        android:layout_alignParentBottom="true"
        android:id="@+id/tv_poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/poweredBy"
        android:textAlignment="center"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10sdp" />

</RelativeLayout>
