<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myPrefix="http://schemas.android.com/apk/res-auto"
    android:id="@+id/incoming_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_incomingcolor"
    tools:context="com.patch.patchcalling.fragments.PatchIncomingFragment">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.78"
        android:scaleType="centerCrop"/>

    <com.patch.patchcalling.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:padding="@dimen/_6sdp"
        android:visibility="gone"
        android:text="@string/incomingText"
        android:textStyle="bold"
        android:textAlignment="center"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_driverName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.patch.patchcalling.custom.CustomTextView
        android:id="@+id/tv_driverName"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="2"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:ellipsize="end"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/iv_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/tv_poweredBy"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_45sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_decline"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/decline"
                android:src="@drawable/disconnect" />

            <com.patch.patchcalling.custom.CustomTextView
                android:id="@+id/tv_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/decline"
                android:visibility="invisible"
                android:textAlignment="center"
                myPrefix:customFont="@string/OpenSans_Reguler"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_45sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_accept"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/accept"
                android:src="@drawable/connect" />

            <com.patch.patchcalling.custom.CustomTextView
                android:id="@+id/tv_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/accept"
                android:visibility="invisible"
                android:textAlignment="center"
                myPrefix:customFont="@string/OpenSans_Reguler"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>


    <com.patch.patchcalling.custom.CustomTextView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tv_poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        myPrefix:customFont="@string/OpenSans_Reguler"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/poweredBy"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--</LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
